added superman stuff

--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Changa+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>Landing Page</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="reshot-icon-logout-RGW39ZX5HL.svg" alt="" />
+        <img
+          src="https://cdn.iconscout.com/icon/premium/png-512-thumb/superman-1876914-1589699.png?f=avif&w=256"
+          alt=""
+        />
       </div>
       <nav id="navbar">
         <a href="#">Home</a>
@@ -19,22 +36,17 @@
       </nav>
     </header>
     <main>
-      <section>
-        <div class="hero">
-          <div class="hero-text">
-            <h1>Introducing the Best Product Ever!</h1>
-            <p>Discover how our product can change your life.</p>
-          </div>
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Introducing the Best Product Ever!</h1>
+          <p>Discover how our product can change your life.</p>
         </div>
-      </section>
+      </div>
 
       <section>
         <div class="about">
           <div class="about-text">
-            <h2>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-              soluta quod
-            </h2>
+            <h2>About</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
               soluta quod
