--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="https://fonts.googleapis.com/css2?family=Changa+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
     />
     <title>Landing Page</title>
@@ -48,8 +40,11 @@
           <div class="about-text">
             <h2>About</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-              soluta quod
+              Welcome to this website, where we celebrate the iconic DC
+              superhero, Superman, in a unique and bold neobrutalism comic
+              style. Join me as I explore the world of Superman through the lens
+              of neobrutalism. This is my first attempt on neobrutalism and I
+              created this landing page for OctaNet program
             </p>
           </div>
         </div>
@@ -64,6 +59,19 @@
               soluta quod
             </p>
           </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="form">
+          <h2>Form</h2>
+          <form>
+            <label for="name">Name:</label><br />
+            <input type="text" id="name" name="name" /><br />
+            <label for="email">Email:</label><br />
+            <input type="text" id="email" name="email" /><br /><br />
+            <input type="submit" value="Submit" />
+          </form>
         </div>
       </section>
     </main>
