--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             <label for="name">Name:</label><br />
             <input type="text" id="name" name="name" /><br />
             <label for="email">Email:</label><br />
-            <input type="text" id="email" name="email" /><br /><br />
+            <input type="text" id="email" name="email" /><br />
+            <label for="phoneno">Phone No:</label><br />
+            <input type="tel" id="phoneno" name="phoneno" /><br />
             <input type="submit" value="Submit" />
           </form>
         </div>
