--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Changa+One&display=swap"
       rel="stylesheet"
     />
+    <script defer src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
+    <script defer src="hovermylinks.js"></script>
     <title>Landing Page</title>
   </head>
   <body>
@@ -39,7 +41,7 @@
         <div class="about">
           <div class="about-text">
             <h2>About</h2>
-            <p>
+            <p class="speech">
               Welcome to this website, where we celebrate the iconic DC
               superhero, Superman, in a unique and bold neobrutalism comic
               style. Join me as I explore the world of Superman through the lens
@@ -53,30 +55,50 @@
       <section>
         <div class="contact">
           <div class="contact-text">
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-              soluta quod
-            </p>
+            <h2>Cape</h2>
+            <p class="speech">This cape can make you go flying brrr</p>
           </div>
         </div>
       </section>
 
       <section>
         <div class="form">
-          <h2>Form</h2>
+          <h2>Register Now</h2>
           <form>
             <label for="name">Name:</label><br />
-            <input type="text" id="name" name="name" /><br />
+            <input class="inputbox" type="text" id="name" name="name" /><br />
             <label for="email">Email:</label><br />
-            <input type="text" id="email" name="email" /><br />
+            <input class="inputbox" type="text" id="email" name="email" /><br />
             <label for="phoneno">Phone No:</label><br />
-            <input type="tel" id="phoneno" name="phoneno" /><br />
+            <input
+              class="inputbox"
+              type="tel"
+              id="phoneno"
+              name="phoneno"
+            /><br />
             <input type="submit" value="Submit" />
           </form>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer_container">
+        <h3>Contact</h3>
+        <table>
+          <tr>
+            <td>Email:</td>
+            <td>example@example.com</td>
+          </tr>
+          <tr>
+            <td>Phone:</td>
+            <td>+1-555-555-5555</td>
+          </tr>
+          <tr>
+            <td>LinkedIn:</td>
+            <td>linkedin.com/in/example</td>
+          </tr>
+        </table>
+      </div>
+    </footer>
   </body>
 </html>
