--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <header>
-      <div class="logo shootLines">
-        <img
-          src="https://cdn.iconscout.com/icon/premium/png-512-thumb/superman-1876914-1589699.png?f=avif&w=256"
-          alt=""
-        />
-      </div>
-      <nav id="navbar">
-        <a class="shootLines" href="#">Home</a>
-        <a class="shootLines" href="#">About</a>
-        <a class="shootLines" href="#">Contact</a>
-      </nav>
-    </header>
-    <main>
-      <div class="hero">
-        <div class="hero-text">
-          <h1>Introducing the Best Product Ever!</h1>
-          <p>Discover how our product can change your life.</p>
+    <div class="hero">
+      <header>
+        <div class="logo">
+          <img
+            class="shootLines"
+            src="https://cdn.iconscout.com/icon/premium/png-512-thumb/superman-1876914-1589699.png?f=avif&w=256"
+            alt=""
+          />
         </div>
+        <nav id="navbar">
+          <a class="shootLines" href="#">Home</a>
+          <a class="shootLines" href="#">About</a>
+          <a class="shootLines" href="#">Contact</a>
+        </nav>
+      </header>
+      <div class="hero-text">
+        <h1>Introducing the Best Product Ever!</h1>
+        <p>Discover how our product can change your life.</p>
       </div>
-
+    </div>
+    <main>
       <section>
         <div class="about">
           <div class="about-text">
@@ -57,6 +57,13 @@
           <div class="contact-text">
             <h2>Cape</h2>
             <p class="speech">This cape can make you go flying brrr</p>
+            <p class="speech">This cape can make you go flying brrr</p>
+            <p class="speech">This cape can make you go flying brrr</p>
+            <p class="speech">This cape can make you go flying brrr</p>
+            <img
+              src="https://cdn.iconscout.com/icon/premium/png-512-thumb/superman-1876914-1589699.png"
+              alt=""
+            />
           </div>
         </div>
       </section>
