cleaned animations and changed tagline to button

--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -33,10 +33,12 @@
       </header>
       <div class="hero-text">
         <h1>Introducing the Best Product Ever!</h1>
-        <p>Discover how our product can change your life.</p>
+        <a href="#main">
+          <p>Discover how our product can change your life.</p>
+        </a>
       </div>
     </div>
-    <main>
+    <main id="main">
       <section>
         <div class="about">
           <div class="about-text">
