--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -13,6 +13,7 @@
     />
     <script defer src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
     <script defer src="hovermylinks.js"></script>
+    <script defer src="script.js"></script>
     <title>Landing Page</title>
   </head>
   <body>
@@ -73,7 +74,7 @@
       <section>
         <div class="form">
           <h2>Register Now</h2>
-          <form>
+          <form id="form">
             <label for="name">Name:</label><br />
             <input
               class="inputbox"
