--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -27,20 +27,46 @@
           />
         </div>
         <nav id="navbar">
-          <a class="shootLines" href="#">Home</a>
-          <a class="shootLines" href="#">About</a>
-          <a class="shootLines" href="#">Contact</a>
+          <a class="shootLines" href="#main">Home</a>
+          <a class="shootLines" href="#about">About</a>
+          <a class="shootLines" href="#contact">Contact</a>
         </nav>
       </header>
       <div class="hero-text">
-        <h1>Introducing the Best Product Ever!</h1>
+        <h1>Fly Like Superman with Our Amazing Cape!</h1>
         <a href="#main">
-          <p>Discover how our product can change your life.</p>
+          <p>Give Your Child the Gift of Flight!</p>
         </a>
       </div>
     </div>
     <main id="main">
-      <section>
+      <section id="benfits">
+        <div class="benfits">
+          <div class="benfits-text">
+            <h2>Benefits</h2>
+            <p class="speech">
+              <span class="sub">Realistic Flight:</span> Our cape uses advanced
+              technology to allow your child to soar through the air just like
+              Superman.
+            </p>
+            <p class="speech">
+              <span class="sub">Safe and Secure:</span> Our cape is designed
+              with safety in mind, so you can rest assured that your child will
+              be safe while flying.
+            </p>
+            <p class="speech">
+              <span class="sub">Easy to Use:</span> Our cape is simple to put on
+              and operate, so your child can start flying in no time.
+            </p>
+            <img
+              src="https://cdn.xxl.thumbs.canstockphoto.com/child-superman-costume-with-cape-house-production-stock-photo_csp19890846.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+
+      <section id="about">
         <div class="about">
           <div class="about-text">
             <h2>About</h2>
@@ -55,23 +81,7 @@
         </div>
       </section>
 
-      <section>
-        <div class="contact">
-          <div class="contact-text">
-            <h2>Cape</h2>
-            <p class="speech">This cape can make you go flying brrr</p>
-            <p class="speech">This cape can make you go flying brrr</p>
-            <p class="speech">This cape can make you go flying brrr</p>
-            <p class="speech">This cape can make you go flying brrr</p>
-            <img
-              src="https://cdn.iconscout.com/icon/premium/png-512-thumb/superman-1876914-1589699.png"
-              alt=""
-            />
-          </div>
-        </div>
-      </section>
-
-      <section>
+      <section id="register">
         <div class="form">
           <h2>Register Now</h2>
           <form id="form">
@@ -104,7 +114,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer id="contact">
       <div class="footer_container">
         <h3>Contact</h3>
         <table>
