fixed placeholder image

--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -58,10 +58,13 @@
               <span class="sub">Easy to Use:</span> Our cape is simple to put on
               and operate, so your child can start flying in no time.
             </p>
-            <img
-              src="https://cdn.xxl.thumbs.canstockphoto.com/child-superman-costume-with-cape-house-production-stock-photo_csp19890846.jpg"
-              alt=""
-            />
+            <div class="child-img">
+              <img
+                class="child-img"
+                src="https://cdn.discordapp.com/attachments/941558138602156062/1127527496401813575/Picsart_23-07-09_14-41-34-760.png"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </section>
