upscaled the child image

--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -61,7 +61,7 @@
             <div class="child-img">
               <img
                 class="child-img"
-                src="https://cdn.discordapp.com/attachments/941558138602156062/1127527496401813575/Picsart_23-07-09_14-41-34-760.png"
+                src="child_flying_in_superman_costume.png"
                 alt=""
               />
             </div>
