restructured project images and removed links

--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -20,11 +20,7 @@
     <div class="hero">
       <header>
         <div class="logo">
-          <img
-            class="shootLines"
-            src="https://cdn.iconscout.com/icon/premium/png-512-thumb/superman-1876914-1589699.png?f=avif&w=256"
-            alt=""
-          />
+          <img class="shootLines" src="./images/superman_logo.webp" alt="" />
         </div>
         <nav id="navbar">
           <a class="shootLines" href="#main">Home</a>
@@ -61,7 +57,7 @@
             <div class="child-img">
               <img
                 class="child-img"
-                src="child_flying_in_superman_costume.png"
+                src="./images/child_flying_in_superman_costume.png"
                 alt=""
               />
             </div>
@@ -136,5 +132,9 @@
         </table>
       </div>
     </footer>
+    <!-- TODO: goto top button -->
+    <!-- <div class="bighead">
+      <img src="./images/bighead_superman.png" alt="" />
+    </div> -->
   </body>
 </html>
